Fix incorrect spacing in description

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ main {
 .qr-code-description {
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-300);
+  gap: var(--spacing-200);
   margin-top: var(--spacing-300);
   padding: 0 var(--spacing-200);
   text-align: center;
